cabal-version:      3.4
name:               miso-bulma
version:            0.1.0.0
synopsis:           Utilities for using Bulma with miso
-- description:
license:            MIT
license-file:       LICENSE
author:             Frank Staals
maintainer:         frank@fstaals.net
-- copyright:
category:           Web
build-type:         Simple
extra-doc-files:    changelog.org
-- extra-source-files:

tested-with: GHC == 9.6.1

common setup
    ghc-options: -Wall
    default-language: GHC2021
    build-depends:
        base                      >=4.18           && < 5
      , miso                      >= 1.8           && < 2

    default-extensions:
        ScopedTypeVariables

library
    import:           setup
    exposed-modules:
        Miso.Bulma.Generic
        Miso.Bulma.Panel
    -- other-modules:
    -- other-extensions:
    hs-source-dirs:   src

test-suite miso-bulma-test
    import:           setup
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        miso-bulma
