cabal-version:      3.4
name:               miso-bulma
version:            0.1.0.0
synopsis:           Utilities for using Bulma with miso
-- description:
license:            MIT
license-file:       LICENSE
author:             Frank Staals
maintainer:         frank@fstaals.net
-- copyright:
category:           Web
build-type:         Simple
extra-doc-files:    changelog.org
-- extra-source-files:
data-dir: resources
data-files:
    indexWithBulmaCDN.html

tested-with: GHC == 9.6.1

common setup
    ghc-options: -Wall
    default-language: GHC2021
    build-depends:
        base                      >= 4.18          && < 5
      , miso                      >= 1.8           && < 2
      , jsaddle                   >= 0.9.9.0       && < 1
      , jsaddle-warp              >= 0.9.9.0       && < 1
      , file-embed                >= 0.0.15        && < 0.1
      , wai                       >= 3.0.3.0       && < 3.3
      , websockets                >= 0.9.5.0       && < 0.14
      , bytestring                >= 0.11          && < 1
      , template-haskell          >= 2.10          && < 3
      , warp                      >= 3.1.2         && < 3.4
      , http-types                >= 0.12          && < 0.13
      , containers                >= 0.6           && < 0.8

-- wai-websockets >=3.0.0.6 && <3.1

    default-extensions:
        ScopedTypeVariables

library
    import:           setup
    exposed-modules:
        Miso.Bulma.Generic
        Miso.Bulma.Panel
        Miso.Bulma.JSAddle
        Miso.Bulma.Color

    other-modules:
        Paths_miso_bulma
    -- other-extensions:
    hs-source-dirs:   src

test-suite miso-bulma-test
    import:           setup
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        miso-bulma
